--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Dinesh Pandiyan | Awesome Dev</title>
+	<title>Saketh Reddy | Awesome Dev</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -25,11 +25,11 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Dinesh!</div>
+		<div class="intro">Hello, I'm Saketh!</div>
 		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/flexdinesh">
+			<a target="_blank" href="https://github.com/Saketh35">
         <i class="fab fa-github" aria-hidden="true" title="Github"></i>
         <span class="sr-only">Github</span>
       </a>
@@ -45,7 +45,7 @@
         <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
         <span class="sr-only">StackOverflow</span>
       </a>
-      <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
+      <a target="_blank" href="https://https://www.linkedin.com/in/saketh-reddy-balpunuri-912063248/">
         <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
         <span class="sr-only">LinkedIn</span>
       </a>
