--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Saketh!</div>
-		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
+		<div class="tagline">Data Science | Machine Learning | Python | Power BI</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/Saketh35">
