--- a/index.html
+++ b/index.html
@@ -33,35 +33,35 @@
         <i class="fab fa-github" aria-hidden="true" title="Github"></i>
         <span class="sr-only">Github</span>
       </a>
-      <a target="_blank" href="https://twitter.com/flexdinesh">
+<!--       <a target="_blank" href="https://twitter.com/flexdinesh">
         <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
         <span class="sr-only">Twitter</span>
-      </a>
-      <a target="_blank" href="https://dev.to/flexdinesh">
+      </a> -->
+<!--       <a target="_blank" href="https://dev.to/flexdinesh">
         <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
         <span class="sr-only">DEV Community</span>
-      </a>
-      <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
+      </a> -->
+<!--       <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
         <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
         <span class="sr-only">StackOverflow</span>
-      </a>
-      <a target="_blank" href="https://https://www.linkedin.com/in/saketh-reddy-balpunuri-912063248/">
+      </a> -->
+      <a target="_blank" href="https://www.linkedin.com/in/sakethreddy35/">
         <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
         <span class="sr-only">LinkedIn</span>
       </a>
-      <a target="_blank" href="https://medium.com/@flexdinesh">
+<!--       <a target="_blank" href="https://medium.com/@flexdinesh">
         <i class="fab fa-medium" aria-hidden="true" title="Medium"></i>
-        <span class="sr-only">Medium</span>
+        <span class="sr-only">Medium</span> -->
       </a>
-      <a target="_blank" href="https://www.freecodecamp.org">
+      <a target="_blank" href="https://www.freecodecamp.org/saketh35">
         <i class="fab fa-free-code-camp" aria-hidden="true" title="FreeCodeCamp"></i>
         <span class="sr-only">FreeCodeCamp</span>
       </a>
-      <a target="_blank" href="https://www.behance.net">
+<!--       <a target="_blank" href="https://www.behance.net">
         <i class="fab fa-behance" aria-hidden="true" title="Behance"></i>
         <span class="sr-only">Behance</span>
-      </a>
-      <a target="_blank" href="https://codepen.io">
+      </a> -->
+      <a target="_blank" href="https://codepen.io/Saketh-the-lessful">
         <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
         <span class="sr-only">CodePen</span>
       </a>
