--- a/index.html
+++ b/index.html
@@ -1,71 +1,240 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saketh Reddy | Awesome Dev</title>
+    <link rel="icon" href="favicon.ico" type="image/png" />
+    <link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
+    <style>
+  /* Add your custom styles here */
 
-	<title>Saketh Reddy | Awesome Dev</title>
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+}
 
-	<link rel="icon" href="favicon.ico" type="image/png" />
+main {
+    text-align: center;
+    padding: 50px;
+}
 
-	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/indigo-white.css">
-	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
+.intro {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
+
+.tagline {
+    font-size: 18px;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.icons-social a {
+    display: inline-block;
+    margin: 0 10px;
+    color: #555;
+    text-decoration: none;
+    font-size: 24px;
+    transition: color 0.3s ease;
+}
+
+.icons-social a:hover {
+    color: #007bff;
+}
+/* Minimal CSS Reset */
+
+html {
+  box-sizing: border-box;
+  font-size: 12px;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+/* Typography */
+
+html {
+	font-family: 'Roboto', sans-serif;
+}
+
+@media (min-width: 576px) {
+	html {
+		font-size: 14px;
+	}
+}
+
+@media (min-width: 768px) {
+	html {
+		font-size: 16px;
+	}
+}
+
+@media (min-width: 992px) {
+	html {
+		font-size: 18px;
+	}
+}
+
+@media (min-width: 1200px) {
+	html {
+		font-size: 20px;
+	}
+}
+
+.icons-social i {
+	font-size: 3em;
+}
+
+/* Custom Styles */
+
+main {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	justify-content: center;
+	padding: 0 30px;
+	text-align: center;
+}
+
+main > .intro {
+	font-family: 'Reem Kufi', sans-serif;
+	font-size: 3.75em;
+	font-weight: 600;
+}
+
+main > .tagline {
+	font-size: 1.5rem;
+	margin: 1.5rem 0;
+	font-weight: 100;
+}
+
+.icons-social i {
+	padding: 10px;
+}
+
+.icons-social a {
+  text-decoration: none;
+}
+
+.devto {
+	margin-bottom: -0.20rem;
+}
+
+.devto svg {
+	margin-bottom: -0.20rem;
+	margin-left: 0.675rem;;
+	width: 2.65rem;
+	height: 2.65rem;
+}
+/* Theme */
+
+main {
+	background: #FFEB3B;
+	color: #1E1E1E;
+}
+
+.icons-social a {
+	color: #1E1E1E;
+}
+
+.icons-social a svg path{
+	fill: #1E1E1E;
+}
+/* Add your custom styles here */
+
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+}
+
+main {
+    text-align: center;
+    padding: 50px;
+}
+
+.intro {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
+
+.tagline {
+    font-size: 18px;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.icons-social a {
+    display: inline-block;
+    margin: 0 10px;
+    color: #555;
+    text-decoration: none;
+    font-size: 24px;
+    transition: color 0.3s ease, transform 0.3s ease; /* Added transform transition */
+}
+
+.icons-social a:hover {
+    color: #007bff;
+    transform: rotateY(360deg); /* 3D rotation effect on hover */
+}
+
+  </style>
 </head>
 <body>
-	<main>
-		<div class="intro">Hello, I'm Saketh!</div>
-		<div class="tagline">Data Science | Machine Learning | Python | Power BI</div>
-		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-		<div class="icons-social">
-			<a target="_blank" href="https://github.com/Saketh35">
-        <i class="fab fa-github" aria-hidden="true" title="Github"></i>
-        <span class="sr-only">Github</span>
-      </a>
-<!--       <a target="_blank" href="https://twitter.com/flexdinesh">
-        <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
-        <span class="sr-only">Twitter</span>
-      </a> -->
-<!--       <a target="_blank" href="https://dev.to/flexdinesh">
-        <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
-        <span class="sr-only">DEV Community</span>
-      </a> -->
-<!--       <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
-        <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
-        <span class="sr-only">StackOverflow</span>
-      </a> -->
-      <a target="_blank" href="https://www.linkedin.com/in/sakethreddy35/">
-        <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
-        <span class="sr-only">LinkedIn</span>
-      </a>
-<!--       <a target="_blank" href="https://medium.com/@flexdinesh">
-        <i class="fab fa-medium" aria-hidden="true" title="Medium"></i>
-        <span class="sr-only">Medium</span> -->
-      </a>
-      <a target="_blank" href="https://www.freecodecamp.org/saketh35">
-        <i class="fab fa-free-code-camp" aria-hidden="true" title="FreeCodeCamp"></i>
-        <span class="sr-only">FreeCodeCamp</span>
-      </a>
-<!--       <a target="_blank" href="https://www.behance.net">
-        <i class="fab fa-behance" aria-hidden="true" title="Behance"></i>
-        <span class="sr-only">Behance</span>
-      </a> -->
-      <a target="_blank" href="https://codepen.io/Saketh-the-lessful">
-        <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
-        <span class="sr-only">CodePen</span>
-      </a>
-    </div>
-	</main>
+    <main>
+        <div class="intro">Hello, I'm Saketh!</div>
+        <div class="tagline">Data Science | Machine Learning | Python | Power BI</div>
+        <!-- ... -->
+<div class="icons-social">
+    <a target="_blank" href="https://github.com/Saketh35" title="Github">
+        <i class="fab fa-github"></i>
+    </a>
+    <a target="_blank" href="https://www.linkedin.com/in/sakethreddy35/" title="LinkedIn">
+        <i class="fab fa-linkedin"></i>
+    </a>
+    <a target="_blank" href="https://www.freecodecamp.org/saketh35" title="FreeCodeCamp">
+        <i class="fab fa-free-code-camp"></i>
+    </a>
+    <a target="_blank" href="https://codepen.io/Saketh-the-lessful" title="CodePen">
+        <i class="fab fa-codepen"></i>
+    </a>
+</div>
+
+    </main>
+    <script>// Add your custom JavaScript here
+
+document.addEventListener('DOMContentLoaded', function () {
+    // Initialization function
+    init();
+});
+
+function init() {
+    console.log('Page loaded, initializing...');
+    // Add any additional initialization logic here
+}
+</script>
 </body>
 </html>
