--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <!-- LinkedIn -->
         <a
           target="_blank"
-          href="https://www.linkedin.com/in/sakethreddy35/"
+          href="https://www.linkedin.com/in/sakethreddybalpunuri/"
           title="LinkedIn"
         >
           <i class="fab fa-linkedin"></i>
